Tue Jun  7 16:09:05 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/dblib/unittests/common.c src/dblib/unittests/common.h:
	* src/dblib/unittests/t0016.c src/dblib/unittests/t0016.sql:
	- support more bcp tests

Tue Jun  7 16:07:04 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/dblib/unittests/t0016.c: compatibility update

Tue Jun  7 11:58:54 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
	* include/tds.h src/ctlib/ctutil.c src/dblib/dbutil.c:
	- add TDS_OFFSET macro

Tue Jun  7 10:46:35 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/dblib/bcp.c src/dblib/dblib.c src/dblib/dbutil.c:
	- fix some dblib result

Tue Jun  7 10:34:51 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/dblib/bcp.c: remove unused code

Tue Jun  7 10:16:07 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
	* include/dblib.h src/dblib/bcp.c src/dblib/dblib.c:
	* src/dblib/rpc.c:
	- add CHECK_CONN macro and use it

Tue Jun  7 10:10:55 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/dblib/bcp.c src/dblib/rpc.c: more type conversions

Mon Jun  6 14:33:18 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/dblib/unittests/t0016.in src/dblib/unittests/t0016.sql:
	* src/tds/query.c:
	- fix quoting identifier if reserved words used

Mon Jun  6 09:50:12 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/apps/defncopy.c: christos patch for defncopy

Mon Jun  6 09:27:10 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
	* include/tds.h src/ctlib/cs.c src/dblib/dblib.c src/odbc/odbc.c:
	* src/odbc/odbc_util.c src/tds/bulk.c src/tds/mem.c:
	* src/tds/token.c src/tds/util.c src/tds/vstrbuild.c:
	- more work on type safety

Sun Jun  5 12:07:15 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
	* TODO.freddy: some notes on todo

Sun Jun  5 11:21:50 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
	* include/sybdb.h src/ctlib/ct.c src/dblib/buffering.h: